fixed deprecated method call